--- a/main.css
+++ b/main.css
@@ -1,26 +1,25 @@
-html, body{
+html,
+body {
     font-family: 'Roboto', sans-serif;
     color: white;
     background-color: rgb(47, 94, 141);
 }
 
-.hidden{
+.hidden {
     display: none;
 }
 
-.center{
+.center {
     margin-left: auto;
     margin-right: auto;
 }
 
-header{
+header {
     height: 150px;
     text-align: center;
     vertical-align: middle;
 }
-.outer-width{
+
+.outer-width {
     width: 400px;
 }
-
-
-
